# rust-sr

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  SCRIPTS.md  build.js  build.sh  package.json  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh  wrangler.toml
.github/workflows/: deploy.yml
src/: database.rs  handlers.rs  index.js  main.rs  models.rs  youtube.rs
static/: host.html  requester.html
worker/: Cargo.toml
worker/src/: lib.rs
