[package]
name = "rust-sr-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
rand = { version = "0.8", features = ["wasm-bindgen"] }
